--- a/doc/html/tree.html.in
+++ b/doc/html/tree.html.in
@@ -12,8 +12,8 @@
     {
       var folder = document.getElementById(id);
       var l = imageNode.src.length;
-      if (imageNode.src.substring(l-20,l)=="ftv2folderclosed.png" || 
-          imageNode.src.substring(l-18,l)=="ftv2folderopen.png")
+      if (imageNode.src.substring(l-20,l)=="pictures/ftv2folderclosed.png" || 
+          imageNode.src.substring(l-18,l)=="pictures/ftv2folderopen.png")
       {
         imageNode = imageNode.previousSibling;
         l = imageNode.src.length;
@@ -25,14 +25,14 @@
       {
         if (imageNode != null) 
         {
-          imageNode.nextSibling.src = "ftv2folderclosed.png";
-          if (imageNode.src.substring(l-13,l) == "ftv2mnode.png")
+          imageNode.nextSibling.src = "pictures/ftv2folderclosed.png";
+          if (imageNode.src.substring(l-13,l) == "pictures/ftv2mnode.png")
           {
             imageNode.src = "ftv2pnode.png";
           }
-          else if (imageNode.src.substring(l-17,l) == "ftv2mlastnode.png")
+          else if (imageNode.src.substring(l-17,l) == "pictures/ftv2mlastnode.png")
           {
-            imageNode.src = "ftv2plastnode.png";
+            imageNode.src = "pictures/ftv2plastnode.png";
           }
         }
         folder.style.display = "none";
@@ -41,14 +41,14 @@
       {
         if (imageNode != null) 
         {
-          imageNode.nextSibling.src = "ftv2folderopen.png";
-          if (imageNode.src.substring(l-13,l) == "ftv2pnode.png")
+          imageNode.nextSibling.src = "pictures/ftv2folderopen.png";
+          if (imageNode.src.substring(l-13,l) == "pictures/ftv2pnode.png")
           {
-            imageNode.src = "ftv2mnode.png";
+            imageNode.src = "pictures/ftv2mnode.png";
           }
-          else if (imageNode.src.substring(l-17,l) == "ftv2plastnode.png")
+          else if (imageNode.src.substring(l-17,l) == "pictures/ftv2plastnode.png")
           {
-            imageNode.src = "ftv2mlastnode.png";
+            imageNode.src = "pictures/ftv2mlastnode.png";
           }
         }
         folder.style.display = "block";
@@ -63,17 +63,17 @@
     <div class="directory">
       <h3>Humanoid Path Planner</h3>
       <div style="display: block;">
-        <p><img src="ftv2pnode.png" alt="o" width=16 height=22 onclick="toggleFolder('folder1', this)"/><img src="ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder1', this)"/><a class="el" href="main.html" target="basefrm">Home</a></p>
-        <p><img src="ftv2plastnode.png" alt="\" width=16 height=22 onclick="toggleFolder('folder2', this)"/><img src="ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder2', this)"/>Types of packages</p>
+        <p><img src="pictures/ftv2pnode.png" alt="o" width=16 height=22 onclick="toggleFolder('folder1', this)"/><img src="pictures/ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder1', this)"/><a class="el" href="main.html" target="basefrm">Home</a></p>
+        <p><img src="pictures/ftv2plastnode.png" alt="\" width=16 height=22 onclick="toggleFolder('folder2', this)"/><img src="pictures/ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder2', this)"/>Types of packages</p>
         <div id="folder2">
-          <p><img src="ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="ftv2node.png" alt="o" width=16 height=22 /><img src="ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/algorithm.html" target="basefrm">Algorithms</a></p>
-          <p><img src="ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="ftv2lastnode.png" alt="\" width=16 height=22 /><img src="ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/corba.html" target="basefrm">Corba interfaces</a></p>
-          <p><img src="ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="ftv2lastnode.png" alt="\" width=16 height=22 /><img src="ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/kppInterface.html" target="basefrm">KPP Add-on</a></p>
+          <p><img src="pictures/ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="pictures/ftv2node.png" alt="o" width=16 height=22 /><img src="pictures/ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/algorithm.html" target="basefrm">Algorithms</a></p>
+          <p><img src="pictures/ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="pictures/ftv2lastnode.png" alt="\" width=16 height=22 /><img src="pictures/ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/corba.html" target="basefrm">Corba interfaces</a></p>
+          <p><img src="pictures/ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="pictures/ftv2lastnode.png" alt="\" width=16 height=22 /><img src="pictures/ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="@prefix@/share/doc/hppDoc/kppInterface.html" target="basefrm">KPP Add-on</a></p>
         </div>
-        <p><img src="ftv2plastnode.png" alt="\" width=16 height=22 onclick="toggleFolder('folder3', this)"/><img src="ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder3', this)"/>How to</p>
+        <p><img src="pictures/ftv2plastnode.png" alt="\" width=16 height=22 onclick="toggleFolder('folder3', this)"/><img src="pictures/ftv2folderclosed.png" alt="+" width=24 height=22 onclick="toggleFolder('folder3', this)"/>How to</p>
         <div id="folder3">
-          <p><img src="ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="ftv2node.png" alt="o" width=16 height=22 /><img src="ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="hppdoc_development.html" target="basefrm">Developing in Hpp</a></p>
-          <p><img src="ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="ftv2lastnode.png" alt="\" width=16 height=22 /><img src="ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="hppdoc_howtoinstall.html" target="basefrm">How to install HPP</a></p>
+          <p><img src="pictures/ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="pictures/ftv2node.png" alt="o" width=16 height=22 /><img src="pictures/ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="hppdoc_development.html" target="basefrm">Developing in Hpp</a></p>
+          <p><img src="pictures/ftv2blank.png" alt="&nbsp;" width=16 height=22 /><img src="pictures/ftv2lastnode.png" alt="\" width=16 height=22 /><img src="pictures/ftv2doc.png" alt="*" width=24 height=22 /><a class="el" href="hppdoc_howtoinstall.html" target="basefrm">How to install HPP</a></p>
         </div>
       </div>
     </div>
