Comptute the Require: of pkg-config file automatically

--- a/hppDoc.pc.in
+++ b/hppDoc.pc.in
@@ -4,6 +4,6 @@ libdir=@libdir@
 includedir=@includedir@
 
 Name: @PACKAGE@
-Description: 
+Description: Documentation suite of the HPP project.
 Version: @VERSION@
-Requires: kwsIO, kwsPlus, hppCore, hppCorbaServer, hppWalkPlanner, hppHRPPlanner, hppCmpPlanner, kppInterface, kppInterfaceWalk, kppInterfaceHRP, kppInterfaceCmp, hppTutorial, kppInterfaceTutorial
+Requires: @pkg_list@
