--- a/doc/html/hppdoc_howtoinstall.html.in
+++ b/doc/html/hppdoc_howtoinstall.html.in
@@ -97,29 +97,16 @@ You can eventually launch the name server: <div class="fragment"><pre class="fra
 </pre></div> the fisrt time and <div class="fragment"><pre class="fragment">omniNames
 </pre></div> the following times.<h4><a class="anchor" name="hppDoc_python">
 Controlling an application using python scripts</a></h4>
-To send request to hppCorbaServer using python, you need to install packages <ul>
-<li><code>omniORBpy</code> through robotpkg (<code>cd ${HOME}/openrobots/robotpkg/devel/omniORBpy; make update</code>) and </li>
-<li><code>hppPython</code> (either through <code>robotpkg</code> or through <code>git</code>).</li>
+To send request to hppCorbaServer using python, you need to install package <ul>
+<li><code>hppPython</code> through <code>robotpkg</code>.</li>
+<div class="fragment"><pre class="fragment">
+cd ${HOME}/openrobots/robotpkg/scripts/hpp-python
+make update
+</pre></div>
 </ul>
-Installation of <code>hppPython</code> is similar to other packages, except that command <div class="fragment"><pre class="fragment">[package] libtoolize -c
-</pre></div> should be omitted.<p>
 <code>hppPython</code> installs a python script <code>hppInit.py</code> that initializes 3 CORBA clients, one to each the 3 CORBA objects instanciated by <code>hppCorbaServer</code> and described at the beginning of this section (<a class="el" href="hppdoc_howtoinstall.html#hppDoc_omniORB">Configuring CORBA and using hppCorbaServer</a>).
 <p>
-<code>hppInit.py</code> is installed in 
-<ul>
-  <li><code>${HOME}/devel/share/script/python</code> if installed through <code>git</code></li> 
-  <li><code>${HOME}/openrobots/share/script/python</code> if installed through <code>robotpkg</code></li> 
-</ul>
-To use this script, you need to set the following environment variables. 
-
-<div class="fragment"><pre class="fragment">setenv PYTHONPATH @HPPPYTHON_PREFIX@/share/script/python:${HOME}/openrobots/lib/pythonx.y/site-packages:${PYTHONPATH}
-setenv LD_LIBRARY_PATH ${HOME}/openrobots/lib:${LD_LIBRARY_PATH}
-</pre></div> 
-where 
-<ul>
-  <li><code>@HPPPYTHON_PREFIX@</code> is the installation prefix of <code>hppPython</code> and depends on the way ou installed it (<code>git</code> or <code>robotpkg</code>),
-  <li><code>x.y</code> is the version number of python installed by <code>robotpkg</code>.</li>
-</ul>
+After installing <code>hppPython</code>, you need to set environment variables. Reconfigure and reinstall this documentation and follow <a href="@HPPPYTHON_PREFIX@/share/doc/hppPython/main.html">this link</a>.
 <p>
 Then open a python shell and call the initialization script <div class="fragment"><pre class="fragment">[~] python
 Python 2.4.3 (#1, Oct 23 2006, 14:19:47)
