Added link to worldModelGrid3D in documentation.

--- a/configure.ac
+++ b/configure.ac
@@ -61,6 +61,8 @@ PKG_CHKADDDPD(KPPINTERFACETUTORIAL, 	kppInterfaceTutorial)
 PKG_CHKADDDPD(HPPOPENHRP, 		hppOpenHRP)
 PKG_CHKADDDPD(HPPVISUALIZEMOVEPLANNER,	hppVisualizeMovePlanner)
 PKG_CHKADDDPD(SLAM3DPLANNER,		slam3DPlanner)
+PKG_CHKADDDPD(HPPENVGENERATOR,		hppEnvGenerator)
+PKG_CHKADDDPD(WORLDMODELGRID3D,		worldModelGrid3D)
 
 
 # --- generate files -------------------------------------------------
