--- a/doc/html/algorithm.html.in
+++ b/doc/html/algorithm.html.in
@@ -9,44 +9,45 @@
 
 <h3>Algorithms dealing with dynamics</h3>
 
-<ul>
-  <li><a href="@ABSTRACTROBOTDYNAMICS_DOCDIR@/main.html">abstractRobotDynamics</a>: abstract interface for robot dynamic model</li>
-  <li><a href="@DYNAMICSJRLJAPAN_DOCDIR@/main.html">dynamicsJRLJapan</a>: JRL Implementation of robot dynamic model</li>
-  <li><a href="@WALKGENJRL_DOCDIR@/main.html">walkGenJRL</a>: JRL Walk Pattern Generator</li>
-  <li><a href="@ABSTRACTGIKTASK_DOCDIR@/main.html">abstractGikTask</a>: Abstract interface for whole body motion planning.</li>
-  <li><a href="@HPPGIK_DOCDIR@/main.html">hppGik</a>: Implementation of whole body motion planning.</li>
-</ul>
+<table>
+  <tr><td width="20"></td><td><a href="@ABSTRACTROBOTDYNAMICS_DOCDIR@/main.html">abstractRobotDynamics</a>: </td><td> abstract interface for robot dynamic model</td></tr>
+  <tr><td width="20"></td><td><a href="@DYNAMICSJRLJAPAN_DOCDIR@/main.html">dynamicsJRLJapan</a>: </td><td> JRL Implementation of robot dynamic model</td></tr>
+  <tr><td width="20"></td><td><a href="@WALKGENJRL_DOCDIR@/main.html">walkGenJRL</a>: </td><td> JRL Walk Pattern Generator</td></tr>
+  <tr><td width="20"></td><td><a href="@ABSTRACTGIKTASK_DOCDIR@/main.html">abstractGikTask</a>: </td><td> Abstract interface for whole body motion planning.</td></tr>
+  <tr><td width="20"></td><td><a href="@HPPGIK_DOCDIR@/main.html">hppGik</a>: </td><td> Implementation of whole body motion planning.</td></tr>
+</table>
 
 <h3>Motion planning for humanoid systems algorithms</h3>
 
-These packages are build upon KineoPathPlanner-SDK. 
-<ul>
+Packages marked by (<--kpp-sdk) are build upon KineoPathPlanner-SDK.
+<table>
   <li><b>General functionalities</b></li>
-  <ul>
-    <li><a href="@KWSPLUS_DOCDIR@/main.html">kwsPlus</a>: extension to KineoWorks (cart-like steering method).</li>
-    <li><a href="@HPPMODEL_DOCDIR@/main.html">hppModel</a>: implementation of hybrid geometric and dynamic robot.</li>
-    <li><a href="@HPPCORE_DOCDIR@/main.html">hppCore</a>: definition of basic classes.</li>
-  </ul>
+      <table>
+	  <tr><td width="20"></td><td><a href="@KWSPLUS_DOCDIR@/main.html">kwsPlus</a>: </td><td> extension to KineoWorks (cart-like steering method) </td><td> (<--kpp-sdk).</td></tr>
+	<tr><td width="20"></td><td><a href="@HPPMODEL_DOCDIR@/main.html">hppModel</a>: </td><td> implementation of hybrid geometric and dynamic robot. </td><td> (<--kpp-sdk)</td></tr>
+	<tr><td width="20"></td><td><a href="@HPPCORE_DOCDIR@/main.html">hppCore</a>: </td><td> definition of basic classes. </td><td> (<--kpp-sdk) </td></tr>
+	</table>
   <li><b>Path Planning for humanoid robots</b></li>
-  <ul>
-    <li><a href="@HPPHRPPLANNER_DOCDIR@/main.html">hppHRPPlanner</a>: functions specific to HRP2 robot.</li>
-    <li><a href="@HPPCMPPLANNER_DOCDIR@/main.html">hppCmpPlanner</a>: contact motion planning</li>
-    <li><a href="@HPPWALKPLANNER_DOCDIR@/main.html">hppWalkPlanner</a>: walk planning for a humanoid robot among obstacles.</li>
-    <li><a href="@HPPLOA_DOCDIR@/main.html">hppLoa</a>: Whole body motion planning with local obstacle avoidance.</li>
-  </ul>
+  <table>
+    <tr><td width="20"></td><td><a href="@HPPHRPPLANNER_DOCDIR@/main.html">hppHRPPlanner</a>: </td><td> Algorithms to plan motion going under an obstacle. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPCMPPLANNER_DOCDIR@/main.html">hppCmpPlanner</a>: </td><td> Contact motion planning. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPWALKPLANNER_DOCDIR@/main.html">hppWalkPlanner</a>: </td><td> Walk planning for a humanoid robot among obstacles. </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPLOA_DOCDIR@/main.html">hppLoa</a>: </td><td> Whole body motion planning with local obstacle avoidance. </td><td>(<--kpp-sdk) </td></tr>
+  </table>
   <li><b>Path Planning and perception</b></li>
-  <ul>
-    <li><a href="@SLAM3DPLANNER_DOCDIR@/main.html">slam3DPlanner</a>: path planning in environments modelled by vision</li>
-    <li><a href="@HPPENVGENERATOR_DOCDIR@/main.html">hppEnvGenerator</a>:</li>
-  </ul> 
+  <table>
+    <tr><td width="20"></td><td><a href="@WORLDMODELGRID3D_DOCDIR@/main.html">worldModelGrid3D</a>: </td><td> Occupancy-grid built by vision.</td><td></td></tr>
+    <tr><td width="20"></td><td><a href="@SLAM3DPLANNER_DOCDIR@/main.html">slam3DPlanner</a>: </td><td> path planning in environments modelled by vision </td><td> (<--kpp-sdk)</td></tr>
+    <tr><td width="20"></td><td><a href="@HPPENVGENERATOR_DOCDIR@/main.html">hppEnvGenerator</a>:</td><td> Handle map built by vision </td><td> (<--kpp-sdk)</td></tr>
+  </table> 
   <li><b>Digital actors</b></li>
-  <ul>
-    <li><a href="@HPPVISUALIZEMOVEPLANNER_DOCDIR@/main.html">hppVisualizeMovePlanner</a>: Visualization of trajectories</li>
-  </ul> 
+  <table>
+    <tr><td width="20"></td><td><a href="@HPPVISUALIZEMOVEPLANNER_DOCDIR@/main.html">hppVisualizeMovePlanner</a>: </td><td> Visualization of trajectories. </td><td> (<--kpp-sdk)</td></tr>
+  </table> 
   <li><b>Tutorial</b></li>
-  <ul>
-  <li><a href="@HPPTUTORIALPLANNER_DOCDIR@/main.html">hppTutorialPlanner</a>: a simple planner to learn how to make and use a planner.</li>
-  </ul> 
+  <table>
+  <tr><td width="20"></td><td><a href="@HPPTUTORIALPLANNER_DOCDIR@/main.html">hppTutorialPlanner</a>: </td><td> a simple planner to learn how to make and use a planner. </td><td> (<--kpp-sdk)</td></tr>
+  </table> 
 </ul>
 
 
