Added link to hppTimingPlanner. Changed message when package is not installed.

--- a/configure.ac
+++ b/configure.ac
@@ -54,6 +54,7 @@ PKG_CHKADDDPD(KPPINTERFACEHRP, 		kppInterfaceHRP)
 PKG_CHKADDDPD(KPPINTERFACECMP, 		kppInterfaceCmp)
 PKG_CHKADDDPD(HPPGIK, 			hppGik)
 PKG_CHKADDDPD(HPPLOA, 			hppLoa)
+PKG_CHKADDDPD(HPPTIMINGPLANNER, 	hppTimingPlanner)
 PKG_CHKADDDPD(DYNAMICSJRLJAPAN,		dynamicsJRLJapan)
 PKG_CHKADDDPD(ABSTRACTROBOTDYNAMICS, 	abstractRobotDynamics)
 PKG_CHKADDDPD(ABSTRACTGIKTASK, 		abstractGikTask)
